# NKU-Rust-Project

./: .gitignore  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  repl.rs  telemetry.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  lib.rs  message.rs  provider.rs  session.rs  store.rs  time.rs
crates/provider-remote/: Cargo.toml
crates/provider-remote/src/: lib.rs
crates/rollback/: Cargo.toml
crates/rollback/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools-doc/: Cargo.toml
crates/tools-doc/src/: lib.rs
crates/tools/src/: edit.rs  grep.rs  lib.rs  path.rs  read.rs  registry.rs  shell.rs  tool.rs  write.rs
docs/: 1-handoff.md  2-core-handoff.md  3-tools-handoff.md  4-rollback-handoff.md
tests/integration/: README.md
