[workspace]
members = ["crates/cli", "crates/core", "crates/tools", "crates/rollback", "crates/provider-remote", "crates/agent", "crates/tools-doc"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/NKU-Rust-Project/NKU-Rust-Project"
