[package]
name = "rust-codingagent-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
rust-codingagent-core = { path = "../core" }
rust-codingagent-tools = { path = "../tools" }
rust-codingagent-rollback = { path = "../rollback" }
rust-codingagent-tools-doc = { path = "../tools-doc" }
regex = "1"
walkdir = "2"
tracing = "0.1"
