[package]
name = "rust-codingagent-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rust-codingagent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
rustyline = { version = "13", features = ["derive"] }
rust-codingagent-core = { path = "../core" }
rust-codingagent-agent = { path = "../agent" }
rust-codingagent-provider-remote = { path = "../provider-remote" }
rust-codingagent-rollback = { path = "../rollback" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
